Fix image overflow and list of contacts, add advisors

--- a/src/app.scss
+++ b/src/app.scss
@@ -66,3 +66,9 @@ a {
     padding: 1rem;
   }
 }
+
+strong {
+  font-size: 15px;
+  font-weight: bold;
+  margin-top: 20px;
+}
